text to vectors

--- a/preprocess/test_preprocess.ipynb
+++ b/preprocess/test_preprocess.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'visualization_funcs' from '../visualization/visualization_funcs.py'>"
+       "<module 'preprocess' from '/Users/jinli/Projects/PetFinder/preprocess/preprocess.py'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,34 +27,37 @@
     "import reduce_memory as rm\n",
     "importlib.reload(rm)\n",
     "import visualization_funcs as vf\n",
-    "importlib.reload(vf)"
+    "importlib.reload(vf)\n",
+    "import preprocess as pre\n",
+    "importlib.reload(pre)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# paths\n",
-    "start_path = '../data'\n",
-    "data = start_path + '/train.csv'"
+    "start_path = '../data/'\n",
+    "data_path = start_path + 'train.csv'\n",
+    "test_path = start_path + 'test/test.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = pd.read_csv(data)"
+    "data_df = pd.read_csv(data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +284,7 @@
        "4              2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -338,15 +341,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Reducing Memory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -364,13 +371,15 @@
     }
    ],
    "source": [
-    "condensed = condense.downcast_df_int_columns(data_df_cat)"
+    "condensed = rm.downcast_df_int_columns(data_df_cat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -413,13 +422,440 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get the Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "downcasting integers for: ['Age', 'Quantity', 'Fee', 'VideoAmt', 'AdoptionSpeed'] \n",
+      "\n",
+      "reduced memory usage for:   Age             from     0.12 to     0.03\n",
+      "reduced memory usage for:   Quantity        from     0.12 to     0.02\n",
+      "reduced memory usage for:   Fee             from     0.12 to     0.03\n",
+      "reduced memory usage for:   VideoAmt        from     0.12 to     0.02\n",
+      "reduced memory usage for:   AdoptionSpeed   from     0.12 to     0.02\n",
+      "\n",
+      "downcasting integers for: ['Age', 'Quantity', 'Fee', 'VideoAmt'] \n",
+      "\n",
+      "reduced memory usage for:   Age        from     0.03 to     0.01\n",
+      "reduced memory usage for:   Quantity   from     0.03 to      0.0\n",
+      "reduced memory usage for:   Fee        from     0.03 to     0.01\n",
+      "reduced memory usage for:   VideoAmt   from     0.03 to      0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_valid, y_train, y_valid, test = pre.get_data(data_path, test_path, 'AdoptionSpeed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Breed1</th>\n",
+       "      <th>Breed2</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Color1</th>\n",
+       "      <th>Color2</th>\n",
+       "      <th>Color3</th>\n",
+       "      <th>MaturitySize</th>\n",
+       "      <th>FurLength</th>\n",
+       "      <th>Vaccinated</th>\n",
+       "      <th>Dewormed</th>\n",
+       "      <th>Sterilized</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Fee</th>\n",
+       "      <th>State</th>\n",
+       "      <th>RescuerID</th>\n",
+       "      <th>VideoAmt</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>PetID</th>\n",
+       "      <th>PhotoAmt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6786</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>7 Puppies</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>White</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>27decc3f571f54ac92229d5afe57c19a</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Puppies for adoption- PJ Tropicana~ Adorable p...</td>\n",
+       "      <td>2eb4fa594</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9837</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>A88</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>White</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>eba983b85e34963999d476ccada91619</td>\n",
+       "      <td>0</td>\n",
+       "      <td>For Adoption</td>\n",
+       "      <td>ce768b010</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7688</th>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Baby Kittens</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>ba2ed53835f071deb31da82a384654ce</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kittens age approx 2 weeks. Found them nearby ...</td>\n",
+       "      <td>3d889fe46</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6556</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Coco</td>\n",
+       "      <td>2</td>\n",
+       "      <td>German Shepherd Dog</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>93135c99bd79564288a9554aef595282</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The mother of the puppy is a German Shepherd mix</td>\n",
+       "      <td>6366dd2f9</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11322</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Jack</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Perak</td>\n",
+       "      <td>39bc0d4d83554ae09a4a3b31b88d9059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The puppy Borned outside our house front gate....</td>\n",
+       "      <td>14bbc5876</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Type          Name  Age               Breed1               Breed2  \\\n",
+       "6786   Dog     7 Puppies    1          Mixed Breed                    0   \n",
+       "9837   Dog           A88    2          Mixed Breed          Mixed Breed   \n",
+       "7688   Cat  Baby Kittens    1  Domestic Short Hair  Domestic Short Hair   \n",
+       "6556   Dog          Coco    2  German Shepherd Dog          Mixed Breed   \n",
+       "11322  Dog          Jack    2          Mixed Breed                    0   \n",
+       "\n",
+       "       Gender Color1  Color2 Color3 MaturitySize FurLength Vaccinated  \\\n",
+       "6786    Mixed  Brown   White      0       Medium    Medium         No   \n",
+       "9837   Female  Brown   White      0       Medium    Medium         No   \n",
+       "7688    Mixed  Black  Yellow  White       Medium     Short         No   \n",
+       "6556   Female  Black   Brown      0       Medium    Medium         No   \n",
+       "11322   Mixed  Brown  Yellow  White        Small     Short   Not Sure   \n",
+       "\n",
+       "       Dewormed Sterilized   Health  Quantity  Fee     State  \\\n",
+       "6786         No         No  Healthy         7    0  Selangor   \n",
+       "9837        Yes         No  Healthy         1    0  Selangor   \n",
+       "7688         No   Not Sure  Healthy         3    0  Selangor   \n",
+       "6556         No         No  Healthy         1    0  Selangor   \n",
+       "11322  Not Sure   Not Sure  Healthy         3    0     Perak   \n",
+       "\n",
+       "                              RescuerID  VideoAmt  \\\n",
+       "6786   27decc3f571f54ac92229d5afe57c19a         0   \n",
+       "9837   eba983b85e34963999d476ccada91619         0   \n",
+       "7688   ba2ed53835f071deb31da82a384654ce         0   \n",
+       "6556   93135c99bd79564288a9554aef595282         0   \n",
+       "11322  39bc0d4d83554ae09a4a3b31b88d9059         1   \n",
+       "\n",
+       "                                             Description      PetID  PhotoAmt  \n",
+       "6786   Puppies for adoption- PJ Tropicana~ Adorable p...  2eb4fa594       5.0  \n",
+       "9837                                        For Adoption  ce768b010       3.0  \n",
+       "7688   Kittens age approx 2 weeks. Found them nearby ...  3d889fe46       2.0  \n",
+       "6556    The mother of the puppy is a German Shepherd mix  6366dd2f9       1.0  \n",
+       "11322  The puppy Borned outside our house front gate....  14bbc5876       3.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6786     3\n",
+       "9837     3\n",
+       "7688     3\n",
+       "6556     2\n",
+       "11322    4\n",
+       "Name: AdoptionSpeed, dtype: int8"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58311\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, os.path\n",
+    "print (len(os.listdir('../data/train_images')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# os.listdir('../data/train_images')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "62.97552191022477"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vf.avg_post_len(data_df_cat['Description'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = X_train['Description'].apply(lambda x: str(x))\n",
+    "\n",
+    "# if there are more words than maxlen, cut it off\n",
+    "maxlen = round (vf.find_average_word_length(posts))\n",
+    "\n",
+    "max_words = 20000 # maximum number of words in embedding\n",
+    "embedding_dim = 100 # dimension of each word vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 400000 word vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings_index = pre.get_GloVe('/Users/jinli/Projects/glove.6B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 19402 unique tokens.\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_input, word_index = pre.map_words_to_int(\n",
+    "    posts.values,\n",
+    "    max_words, \n",
+    "    maxlen\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_matrix = pre.create_embedding_matrix (\n",
+    "    word_index, \n",
+    "    embeddings_index, \n",
+    "    max_words, \n",
+    "    embedding_dim\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 100)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_matrix.shape"
+   ]
   },
   {
    "cell_type": "code",
