preprocessed tabular data

--- a/preprocess/test_preprocess.ipynb
+++ b/preprocess/test_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<module 'preprocess' from '/Users/jinli/Projects/PetFinder/preprocess/preprocess.py'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20,6 +20,7 @@
     "import importlib\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', 100)\n",
+    "import numpy as np\n",
     "\n",
     "import sys\n",
     "sys.path.insert(0, '../visualization')\n",
@@ -48,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_df = pd.read_csv(data_path)"
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +287,7 @@
        "4              2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "hidden": true
    },
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "hidden": true
    },
@@ -423,15 +426,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Get the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -461,8 +468,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -682,7 +691,7 @@
        "11322  The puppy Borned outside our house front gate....  14bbc5876       3.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,8 +702,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -707,7 +718,7 @@
        "Name: AdoptionSpeed, dtype: int8"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,8 +729,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -736,8 +749,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# os.listdir('../data/train_images')"
@@ -745,15 +761,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Text Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -761,7 +781,7 @@
        "62.97552191022477"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,14 +792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "posts = X_train['Description'].apply(lambda x: str(x))\n",
     "\n",
     "# if there are more words than maxlen, cut it off\n",
-    "maxlen = round (vf.find_average_word_length(posts))\n",
+    "maxlen = round (vf.avg_post_len(posts))\n",
     "\n",
     "max_words = 20000 # maximum number of words in embedding\n",
     "embedding_dim = 100 # dimension of each word vector"
@@ -787,8 +809,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -804,9 +828,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinli/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -825,8 +860,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true,
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "embedding_matrix = pre.create_embedding_matrix (\n",
@@ -839,16 +877,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 100)"
+       "(20000, 100)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,6 +896,316 @@
    "source": [
     "embedding_matrix.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tabular Preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Breed1</th>\n",
+       "      <th>Breed2</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Color1</th>\n",
+       "      <th>Color2</th>\n",
+       "      <th>Color3</th>\n",
+       "      <th>MaturitySize</th>\n",
+       "      <th>FurLength</th>\n",
+       "      <th>Vaccinated</th>\n",
+       "      <th>Dewormed</th>\n",
+       "      <th>Sterilized</th>\n",
+       "      <th>Health</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Fee</th>\n",
+       "      <th>State</th>\n",
+       "      <th>VideoAmt</th>\n",
+       "      <th>PetID</th>\n",
+       "      <th>PhotoAmt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6786</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>White</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2eb4fa594</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9837</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>No_Name</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>White</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ce768b010</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7688</th>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3d889fe46</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6556</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>2</td>\n",
+       "      <td>German Shepherd Dog</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Selangor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6366dd2f9</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11322</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Name</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Mixed</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Short</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Healthy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Perak</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14bbc5876</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Type     Name  Age               Breed1               Breed2  Gender  \\\n",
+       "6786   Dog     Name    1          Mixed Breed                 None   Mixed   \n",
+       "9837   Dog  No_Name    2          Mixed Breed          Mixed Breed  Female   \n",
+       "7688   Cat     Name    1  Domestic Short Hair  Domestic Short Hair   Mixed   \n",
+       "6556   Dog     Name    2  German Shepherd Dog          Mixed Breed  Female   \n",
+       "11322  Dog     Name    2          Mixed Breed                 None   Mixed   \n",
+       "\n",
+       "      Color1  Color2 Color3 MaturitySize FurLength Vaccinated  Dewormed  \\\n",
+       "6786   Brown   White   None       Medium    Medium         No        No   \n",
+       "9837   Brown   White   None       Medium    Medium         No       Yes   \n",
+       "7688   Black  Yellow  White       Medium     Short         No        No   \n",
+       "6556   Black   Brown   None       Medium    Medium         No        No   \n",
+       "11322  Brown  Yellow  White        Small     Short   Not Sure  Not Sure   \n",
+       "\n",
+       "      Sterilized   Health  Quantity  Fee     State  VideoAmt      PetID  \\\n",
+       "6786          No  Healthy         7    0  Selangor         0  2eb4fa594   \n",
+       "9837          No  Healthy         1    0  Selangor         0  ce768b010   \n",
+       "7688    Not Sure  Healthy         3    0  Selangor         0  3d889fe46   \n",
+       "6556          No  Healthy         1    0  Selangor         0  6366dd2f9   \n",
+       "11322   Not Sure  Healthy         3    0     Perak         1  14bbc5876   \n",
+       "\n",
+       "       PhotoAmt  \n",
+       "6786        5.0  \n",
+       "9837        3.0  \n",
+       "7688        2.0  \n",
+       "6556        1.0  \n",
+       "11322       3.0  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X_cleaned.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "converting Name                           size:  0.83\t->\t 0.11\n",
+      "converting Breed1                         size:  0.94\t->\t 0.14\n",
+      "converting Breed2                         size:  0.86\t->\t 0.12\n",
+      "converting Color1                         size:  0.84\t->\t 0.11\n",
+      "converting Color2                         size:  0.84\t->\t 0.11\n",
+      "converting Color3                         size:  0.83\t->\t 0.11\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinli/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/data.py:625: DataConversionWarning: Data with input dtype int8, int16, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.partial_fit(X, y)\n",
+      "/Users/jinli/anaconda3/lib/python3.6/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype int8, int16, float64 were all converted to float64 by StandardScaler.\n",
+      "  return self.fit(X, **fit_params).transform(X)\n"
+     ]
+    }
+   ],
+   "source": [
+    "trans = pre.DataCleaning()\n",
+    "train_X_cleaned = trans.fit_transform(X_train)\n",
+    "test = train_X_cleaned.drop('PetID', axis=1)#.apply(lambda x: str(x))\n",
+    "\n",
+    "train_X_1hot, pipeline_1hot = pre.transform_df(\n",
+    "    test,\n",
+    "    cat_encode_type=\"one hot\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11994, 364)"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X_1hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ColumnTransformer(n_jobs=None, remainder='drop', sparse_threshold=0.3,\n",
+       "         transformer_weights=None,\n",
+       "         transformers=[('num', Pipeline(memory=None,\n",
+       "     steps=[('std_scaler', StandardScaler(copy=True, with_mean=True, with_std=True))]), ['Age', 'Quantity', 'Fee', 'VideoAmt', 'PhotoAmt']), ('cat', OneHotEncoder(categorical_features=None, categories=None,\n",
+       "       dtype=<class 'numpy.float64'>, handle_unkn... 'Color3', 'MaturitySize', 'FurLength', 'Vaccinated', 'Dewormed', 'Sterilized', 'Health', 'State'])])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline_1hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
